--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>LambdaLab</title>
+        <title>λab</title>
     </head>
     <body>
-        <h1>LambdaLab</h1>
+        <h1>λab</h1>
+
+        <div id="program" contenteditable="true">λx. x</div>
 
         <script src="lambdalab.js"></script>
     </body>
