Hijack input to type lambdas

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
         <div id="program" contenteditable="true">λx. x</div>
 
+        <p>Press the backslash key to type a λ.</p>
+
         <script src="lambdalab.js"></script>
     </body>
 </html>
