Use Webpack for browser

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 
         <p>Press the backslash key to type a λ.</p>
 
-        <script src="lambdalab.js"></script>
+        <script src="lambdalab.bundle.js"></script>
     </body>
 </html>
