Display pretty-printed results

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <h1>λab</h1>
 
         <div id="program" contenteditable="true">λx. x</div>
+        <ul id="result"></ul>
 
         <p>Press the backslash key to type a λ.</p>
 
