--- a/index.html
+++ b/index.html
@@ -3,6 +3,22 @@
     <head>
         <meta charset="UTF-8" />
         <title>λab</title>
+        <style>
+            body {
+                font-family: Verdana, Tahoma, Geneva, sans-serif;
+                line-height: 140%;
+                padding: 1rem 3rem;
+            }
+
+            #program {
+                font-size: 200%;
+                outline: none;
+            }
+
+            h1, p {
+                color: #999;
+            }
+        </style>
     </head>
     <body>
         <h1>λab</h1>
