Style for the result

--- a/index.html
+++ b/index.html
@@ -11,12 +11,18 @@
             }
 
             #program {
-                font-size: 200%;
+                font-size: 250%;
                 outline: none;
             }
 
             h1, p {
                 color: #999;
+            }
+
+            #result {
+                list-style: none;
+                padding-left: 0;
+                font-size: 150%;
             }
         </style>
     </head>
