Hide the instructions

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div id="program" contenteditable="true">λx. x</div>
         <ul id="result"></ul>
 
-        <p>Press the backslash key to type a λ.</p>
+        <p class="help">Press the backslash key to type a λ.</p>
 
         <script src="lambdalab.bundle.js"></script>
     </body>
