Better visual error display

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 display: none;
                 color: red;
                 position: absolute;
+                margin-top: -1rem;
             }
         </style>
     </head>
@@ -41,7 +42,7 @@
         <p class="help">Press the backslash key to type a λ.</p>
 
         <div id="error">
-            !!!
+            ▼
             <span id="errorMessage"></span>
         </div>
 
