First pass at user-defined argumentless macros

--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
         <div id="program" contenteditable="true">λx. x</div>
         <ul id="result"></ul>
 
-        <p class="help">Press the backslash key to type a λ.</p>
+        <p class="help">Press the backslash key to type a λ. <br> Define a new macro with #define 
+            &lt MACRO &gt &lt content &gt. Macros should be closed values, and will be 
+            expanded when used in evaluation.</p>
 
         <div id="error">
             ▼
