--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 outline: none;
             }
 
-            h1, p {
+            h1, .help {
                 color: #999;
             }
 
@@ -35,6 +35,20 @@
                 position: absolute;
                 margin-top: -1rem;
             }
+
+            #options {
+                background: #ddd;
+                padding: 1rem;
+
+                width: 15rem;
+                position: absolute;
+                right: 0;
+                top: 0;
+                bottom: 0;
+            }
+            #options p {
+                margin: 0.5rem 0;
+            }
         </style>
     </head>
     <body>
@@ -43,42 +57,52 @@
         <div id="program" contenteditable="true">λx. x</div>
         <ul id="program_result"></ul>
 
-        <p class="program_help">Press the backslash key to type a λ.</p>
+        <p class="help program_help">Press the backslash key to type a λ.</p>
 
         <div id="program_error">
             ▼
             <span id="program_errorMessage"></span>
         </div>
 
-        <form id="strategy" action="">
-            <label>Reduction Strategy</label>            
-            <input type = "radio"
-                   name = "evalStrat"
-                   id = "cbv"
-                   value = "cbv"
-                   checked = "checked" />
-            <label for = "cbv">Call-By-Value</label>
-            <input type = "radio"
-                   name = "evalStrat"
-                   id = "cbn"
-                   value = "cbn" />
-            <label for = "cbn">Call-By-Name</label>
-            <input type = "radio"
-                   name = "evalStrat"
-                   id = "normal"
-                   value = "normal" />
-            <label for = "normal">Full Normal Order</label>
-            <input type = "radio"
-                name = "evalStrat"
-                id = "appl"
-                value = "appl" />
-            <label for = "appl">Full Applicative Order</label>
-        </form>
-        
+        <div id="options">
+            <form id="strategy" action="">
+                <h3>Reduction Strategy</h3>
+                <p>
+                    <input type = "radio"
+                           name = "evalStrat"
+                           id = "cbv"
+                           value = "cbv"
+                           checked = "checked" />
+                    <label for = "cbv">Call-By-Value</label>
+                </p>
+                <p>
+                    <input type = "radio"
+                           name = "evalStrat"
+                           id = "cbn"
+                           value = "cbn" />
+                    <label for = "cbn">Call-By-Name</label>
+                </p>
+                <p>
+                    <input type = "radio"
+                           name = "evalStrat"
+                           id = "normal"
+                           value = "normal" />
+                    <label for = "normal">Full Normal Order</label>
+                </p>
+                <p>
+                    <input type = "radio"
+                        name = "evalStrat"
+                        id = "appl"
+                        value = "appl" />
+                    <label for = "appl">Full Applicative Order</label>
+                </p>
+            </form>
+        </div>
+
         <div id="macro" contenteditable="true">IF ≜ λb. λt. λf. b t f </div>
         <ul id="macro_result"></ul>
         <p class="macro_help">Press the = key to type a ≜.</p>
-        
+
         <div id="macro_error">
             ▼
             <span id="macro_errorMessage"></span>
