--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
                 top: 0;
                 bottom: 0;
             }
+            #options h3 {
+                margin-top: 1.5rem;
+                margin-bottom: 0.5rem;
+            }
             #options p {
                 margin: 0.5rem 0;
             }
@@ -57,6 +61,10 @@
                 background: transparent;
                 padding: 0.5rem 1rem 1rem 1rem;
                 font-size: 200%;
+            }
+            #share_link {
+                width: 100%;
+                margin-top: 0;
             }
         </style>
     </head>
@@ -105,6 +113,9 @@
                         value = "appl" />
                     <label for = "appl">Full Applicative Order</label>
                 </p>
+
+                <h3>Share</h3>
+                <input type="text" id="share_link" readonly>
             </form>
         </div>
         <button id="show_options">⚙︎</button>
