Options hidden by default

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
             }
 
             #options {
+                visibility: hidden;
+
                 background: #ddd;
                 padding: 1rem;
 
