--- a/index.html
+++ b/index.html
@@ -68,6 +68,15 @@
                 width: 100%;
                 margin-top: 0;
             }
+            
+            .active_abs {
+                color : #0000CD;
+            }
+
+            .active_subst {
+                color : #B31B1B;
+            }
+
         </style>
     </head>
     <body>
