--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
         <div id="macro" contenteditable="true">IF ≜ λb. λt. λf. b t f </div>
         <ul id="macro_result"></ul>
-        <p class="macro_help">Press the = key to type a ≜.</p>
+        <p class="macro_help">Press the = key to type a ≜. Press the enter key when done to save your definition.</p>
 
         <div id="macro_error">
             ▼
