--- a/index.html
+++ b/index.html
@@ -77,6 +77,15 @@
                 color : #B31B1B;
             }
 
+
+            #macrolist {
+                overflow: auto;
+                list-style: none;
+                padding-left: 0;
+                font-size: 150%;
+                height: 500px;
+            }    
+
         </style>
     </head>
     <body>
@@ -135,6 +144,9 @@
         <div id="macro" contenteditable="true">IF ≜ λb. λt. λf. b t f </div>
         <ul id="macro_result"></ul>
         <p class="macro_help">Press the = key to type a ≜. Press the enter key when done to save your definition.</p>
+        
+        <p class = "macro_list_help">Your currently defined macros: </p>
+        <ul id = "macrolist"></ul>
 
         <div id="macro_error">
             ▼
