draw blue connecting edge between target expr and variable it is replacing in subst tree

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <body>
         <h1>λab</h1>
 
-        <div id="program" contenteditable="true">λx. x</div>
+        <div id="program" contenteditable="true">(λx. x) λy. y</div>
 
         <div id="graph_output"></div>
 
