added textbox input for interactive mode

--- a/index.html
+++ b/index.html
@@ -121,6 +121,11 @@
         </div>
 
         <div id="options">
+            <input type = "checkbox"
+            name = "guess"
+            id = "guess"
+            value = "guess"/>
+            <label for = "cbv">Interactive Mode</label>
             <form id="strategy" action="">
                 <h3>Reduction Strategy</h3>
                 <p>
