--- a/index.html
+++ b/index.html
@@ -56,14 +56,7 @@
                 margin: 0.5rem 0;
             }
 
-            #graph_output {
-                float:right;
-                overflow:visible;
-                width: 500px;
-                height: 500px;
-            }
-
-            #graph_result_output {
+            .graph {
                 float:right;
                 overflow:visible;
                 width: 500px;
@@ -108,8 +101,8 @@
 
         <div id="program" contenteditable="true">(λx. x) λy. y</div>
 
-        <div id="graph_result_output"></div>
-        <div id="graph_output"></div>
+        <div class="graph" id="graph_result_output"></div>
+        <div class="graph" id="graph_output"></div>
 
         <ul id="program_result"></ul>
 
