saving and loading macros in web interface

--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
                 <h3>Share</h3>
                 <input type="text" id="share_link" readonly>
             </form>
+            <h3>Macros</h3>
+            Save Macros: <button id='download_macros'>Download</button>
+            <br>
+            Upload Macros: <input type="file" id="upload_macros">
         </div>
         <button id="show_options">⚙︎</button>
 
